--- a/.settings.template.env
+++ b/.settings.template.env
@@ -1,5 +1,5 @@
-FACEBOOK_APP_ID="333424493386564"
-FACEBOOK_APP_SECRET="4c2b5c34d000554213a38c7c40ad25e3"
+FACEBOOK_APP_ID=""
+FACEBOOK_APP_SECRET=""
 
 SENDHUB_USERNAME=""
 SENDHUB_APIKEY=""
