updates to precompile

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,6 +1,7 @@
 ---
+books.png: books-0828ae2ae510aae4e82411820f81c2da.png
 fb.png: fb-52af003abb7f1872ceb6a2b6ac264718.png
 logo.png: logo-eda9e687844d5de4b512fbcd368ca454.png
 rails.png: rails-782b548cc1ba7f898cdad2d9eb8420d2.png
-application.js: application-e56457ae8705676577e2eceda7f8dd4e.js
-application.css: application-8d2b53ce98662ea1f1d834402e3e3b8a.css
+application.js: application-1001480087eb873374641f54f4c61e21.js
+application.css: application-fdd9553d35be0fc84f648cd0c46039a6.css
