--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,10 +1,10 @@
 development:
   host: localhost
-  database: heorot_development
+  database: biblio_bridge_development
 
 test:
   host: localhost
-  database: heorot_test
+  database: biblio_bridge_test
 
 # set these environment variables on your prod server
 production:
